# woliveiras.github.io

./: .gitignore  .npmrc  .pages.yml  AGENTS.md  CLAUDE.md  CNAME  README-flo-bit.dev-blog-template.md  README.md  add-mermaid-classname.ts  astro.config.ts  biome.json  geremmyas.yml  package-lock.json  package.json  pagefind.json  pnpm-lock.yaml  pnpm-workspace.yaml  shiki-title-transformer.ts  tailwind.config.mjs  todo.md  tsconfig.json
.claude/commands/: new-post.md  review-post.md  suggest-tags.md  translate-post.md
.claude/context/: content-guidelines.md
.continue/docs/: continue-doc.yaml
.continue/models/: gemma3:4b.yaml
.github/: CODEOWNERS   copilot-instructions.md  dependabot.yml
context/: domain-and-safety.md  editorial-guidelines.md  project-briefs.md  series-positioning.md  technical-architecture.md
docs/: architecture.md  blog-post-authoring.md  code-quality.md  content.md  development.md
public/: site.webmanifest
resources/: langgraph.md  pydantic.md  security-and-prompt-injection.md
src/: colors.ts  config.json  content.config.ts  env.d.ts  types.ts  utils.ts
src/components/: Tag.astro  (+15 more)
vetsupport/: .env.example  README.md  pyproject.toml
vetsupport/samples/kassandra/: lab-report-summary.md
vetsupport/samples/luna/: appetite-note.md
vetsupport/samples/threat/: injection-note.md
vetsupport/src/vetsupport/: __main__.py  config.py  db.py  graph.py  indexing.py  queries.py  retrieval.py  safety.py  telemetry.py
vetsupport/tests/: test_briefing.py  test_chunking.py  test_ingest.py  test_safety.py  test_security.py  test_telemetry.py
(+273 files in other folders)
